more about projects

--- a/goml.html
+++ b/goml.html
@@ -66,11 +66,32 @@
 										Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of
 										IndieCade 2023 Night Games!
 									</p>
+									<h2>
+										As a Designer
+									</h2>
 									<p>
 										This is an Alt-Ctrl game for my second semester graduate course. On the project, I helped work on design along with the
-										rest of the team. This includes a dog mechanic that we ultimately had to cut. I also worked on the sound design for the game,
-										including all the music and SFX for the game. The main menu page, cinematic, and tutorial page were also programmed and designed by me -
-										not including the art.
+										rest of the team. This includes a dog mechanic that we ultimately had to cut. The dog was meant to be the way you gained points 
+										within the game. On the controller side, the player would pat the dog's head, then in the game the dog would collect all the toys 
+										on the lawn, which would increase your score. We cut this pretty early on due to time constraints, but it is a fun mechanic that 
+										I like to share.
+										<br />
+										I also worked on designing other aspects of the game, which was largely a team effort. I designed the Main Menu and Tutorial screens 
+										for the game (not including the art assets). It was a lot of fun to work with the cinematics in Unreal since it was my first time using 
+										them, at the time.
+									</p>
+									<h2>
+										As a Sound Designer
+									</h2>
+									<p>
+										This project was the first one that I really worked on sound design in a game. Since I got a minor in Music Production, and have played 
+										instruments my whole life, this was a lot of fun for me. I used the Cakewalk DAW, and made the title and main theme of the game. It took 
+										me a bit of time to get the right sound, but I'm overall happy with how it turned out - though I've listened to it so many times now I can 
+										hear it in my sleep.
+										<br />
+										I also worked on the SFX in the game. Most of the sounds are sourced from the audio library we have access to as students. I had plans to 
+										record some of our own sounds, and we do have some when the old man yells, but due to time and being mostly focussed on the music, I didn't 
+										have time to do this.
 									</p>
 									<p>
 										Here is the main theme I made for the game:
