--- a/heartofhampstead.html
+++ b/heartofhampstead.html
@@ -59,14 +59,38 @@
 										Timeline: 4-5 months <br />
 										Worked On: Game Design, Game Narrative, Game Programming, etc.
 									</p>
+									<h2>
+										As a Designer
+									</h2>
 									<p>
 										This project was for my undergrad capstone class. I designed and planned out the project myself, and got the opportunity to
 										work with an amazing artist that wanted to work on a game for their own capstone project.
-									</p>
-									<p>
+										<br />
 										As the lead on the project, I designed the short narrative behind the game, as well as many other
 										aspects including a beliefs system that the player uses at the end of each day, the narrative and character dialogue, and
-										part of the level design. Along with this, I did all of the programming for the game.
+										part of the level design.
+										<br />
+										This was my first complete experience game that I had made, and it is a little rough in some areas, but I am proud of the work the 
+										two of us did. Currently, I am making plans to rework this game in Unreal in my free time. I have a lot of notes on what I want to rework/do better. 
+										This partly includes reworking the narrative, adding in an intro/tutorial level, adding in more interactions, among other things. I don't 
+										have a plan yet on when this will be done as it's secondary to my schoolwork and job.
+									</p>
+									<h2>
+										As a Programmer
+									</h2>
+									<p>
+										Since this was a two-person project I did all of the programming on the game. This was my Capstone project for my Computer Science degree, 
+										so the programming was a big part for me. I made the movement system, the dialogue system, the beliefs system, etc. It was a lot of fun for 
+										me to do this, and I am proud for what it is.
+										<br />
+										The biggest hurdle I had was creating the beliefs system. At the end of each day, the player can pick what they believed and didn't believe 
+										from the notes they found. When designing it, I had come up with differnt ways to do this. An easy way would to make them into a check-list, 
+										but I wanted the player to have a bit more agency than that. This is when I came up with the idea of dragging the statements into two columns. 
+										<br />
+										After deciding how it would work, I had to program it. The idea of it was fairly simple, drag the statements to one side of the screen or the 
+										other, but it caused a lot of issues for me. One issue was that it didn't seem to cover the entire area I was expecting it to, so statements would 
+										be dragged but not actually in the area they needed to be. I fixed this issue by tweaking the values, as well as making the area a little larger 
+										than I thought it should be - but this also allows for mistakes where the player didn't fully drag it over.
 									</p>
 								</li>
 								<li>
