--- a/release.html
+++ b/release.html
@@ -61,15 +61,31 @@
 										Timeline: about 3 weeks <br />
 										Worked On: Game Design, Game Programming
 									</p>
+									<h2>
+										As a Programmer
+									</h2>
+									<p>
+										We had two programmers on our team, including myself. Since we had two parts of our game we each took one of those parts. For my part, I worked 
+										on the music therepy section of our game. This is the second part of the game, where you go to after smashing glass objects. 
+										<br />
+										In this room, you are able to intereact with a bunch of glowing orbs. Since it is a VR game, you are able to reach out and touch the orbs with your 
+										hands. Doing so will play a note, and each orb has its own unique note. The programming side of this was fairly simple, the trouble I had was just tweaking 
+										it so it worked exactly how we wanted it to. One issue was the note repeatedly playing if the player held their hand in the orb. This would accidently happen 
+										since it wouldn't take very long before it would play again. This was a simple fix by just adding a delay so it couldn't be played immediately again.
+									</p>
+									<h2>
+										As a Designer
+									</h2>
 									<p>
 										The team disscused as a whole what our direction was going to be, given the restriction of it being a serious game. We decided on a rage room and
 										a music therepy room.
+										<br />
+										Since I was taking on the part of programming the music therepy room, I also had a hand in designing it as well. We had an amazing Sound Designer on our team, 
+										and together we worked out that the room would be a bucnh of orbs that the player will be able to touch and play individual notes however they please. This was 
+										a lot of fun to work on and implement. We also were able to talk to a subject matter expert (a therepist), and get insight on what we were doing right and wrong. 
+										Hearing their feedback was a great thing for us, as we felt that we were working in the right direction overall.
 									</p>
-									<p>
-										I helped design and programmed the music orbs. After the player destroys what they would like in the glass rage room, they move on to the soothing
-										music room. Being in VR, the player is able to reach out and touch the orbs. Doing so plays a note, and they can make their own melody to the background
-										music by touching many of the orbs in whatever pattern they like.
-									</p>
+
 									<a href="https://github.com/NieceyX/SeriousGame" class="button">Repository</a>
 								</li>
 								<li>
