--- a/parkhourror.html
+++ b/parkhourror.html
@@ -60,9 +60,34 @@
 										Timeline: current project <br />
 										Working on: Production, Sound Design
 									</p>
+									<h2>
+									As a Producer
+									</h2>
 									<p>
-										So far, I have taken on the role of associate producer, as well as the team's sound designer. I have managed Jira and team
-										stand-ups. Along with this, I have designed sounds and music to be used within the game. Everything is still a work-in-progress, though.
+										I am filling the role of associative producer. So far, I have managed Jira, held and participated in standups, as well as managed 
+										one of the feature teams for the project. On Jira, I have created and managed tickets for our sprints - including managing milestones 
+										and epics. I have helped create our Sprint Review decks and show off our work to the rest of the cohort. I'm super excited for this project 
+										and can't wait to see what our team can do!
+									</p>
+									<h2>
+									As a Sound Designer
+									</h2>
+									<p>
+										Also on our team, I have filled the role as Audio/Sound Designer. I have been using Cakewalk for my DAW, and have messed around with a 
+										bunch of different sounds and music. So far on the project, I have been focussing most of my time here into our music system. I wanted to 
+										make a system that allowed the player to take however long they need in the game. Due to this, I thought one long track would be a bad route 
+										to take. I have made short 20 measure tracks that flow into eachother by keeping the baseline the same. Then, my music system blueprint will 
+										pick a random track out of the ones it's given to play. My prototype audio and the current state of the music system can be seen and played below.
+										<br />
+										For the future of the project, I plan to have a different track selection for each of our levels. The idea is that the music and sounds of the 
+										city become creepier and more human-like as the player gets closer to the center/heart of the city. I am excited to start working on this aspect 
+										of the sounds.
+										<br />
+										I had a lot of fun making the music system blueprint, and am still tweaking it as needed. I used the Quartz system that Unreal has, 
+										and it has worked very good for us so far. I'm excited to see where it grows from here!
+										<br />
+										On the SFX side, I have created an asset list of all of the different sounds we will need. I have found stand-in SFX for most of our needs from 
+										the sound library we have access to, and will be working in the future to record our own sounds.
 									</p>
 									<p>
 										Here is the prototype audio I did:
