--- a/aboutme.html
+++ b/aboutme.html
@@ -26,10 +26,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html" class="active">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
-							<li><a href="aboutme.html">About Me</a></li>
+							<li><a href="aboutme.html" class="active">About Me</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
@@ -42,55 +42,37 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Introduction</h2>
+											<h2>About Me</h2>
 										</header>
 										<p>
-											Hello! I'm a game developer who mainly focusses on design. I am currently working towards
-											my Masters in Entertainment Art and Engineering at the University of Utah. I got my undergrad
-											degree in Computer Science at Buena Vista University and am passionate about making games! Here
-											you can find many games I've worked on - even some in progress! Take a look around and feel free
-											to contact me with my info at the bottom of each page.
+											Hey there!
+											<br />
+											I'm currently working towards my Masters degree at the University of Utah! I have about 1 semester left, then I'll get my 
+											Entertainment Arts and Enginnering Masters. I originally went to my undergrad for Computer Science, and minored in Music 
+											Production at Buena Vista University. I've had a ton of fun in both programs, and can't wait to get out there.
+											<br />
+											I love all things Game Design. Thinking critically about games, how they work, and what could be done better is really 
+											fun for me. There are so many differnt ways to do things, and they all have their own advantages and disadvantages. I am 
+											looking forward to keep designing in different areas.
+											<br />
+											Along with this, I love music. I have played instruments for the majority of my life, starting before second grade. I have 
+											played a couple differnt instruments, including guitar, violin, and piano, but my one true love is the saxophone (tenor more specifically). 
+											I have had a passion for music, and have been a part of concert and jazz band through my undergrad. Becasue of this, I also 
+											have an interest in Sound Design in games, and have worked on it for a couple of my projects.
 										</p>
-										<a href="aboutme.html" class="button">More About Me</a>
+										<p>
+											Outside of game development, I love reading - though I have way too many books on my to-read list - and I, of course, love
+											playing games. One of my all-time favorite game series is the original Mass Effect trilogy. These games are responsible for
+											me wanting to make games as a kid, and they're super nostalgic for me. I still love playing them, and I've played the second
+											game more times than I can count.
+											<br />
+											One of my favorite games I've played recently is Baldur's Gate 3. I admire how the characters really feel alive, and games
+											where you can choose your own path have always held my fascination (as we can see with the Mass Effect trilogy). I am really enjoying 
+											the game, and can't wait to try out different choices and paths - though I find it hard to be mean to NPC's in games.
+										</p>
 									</div>
 									<span class="image"><img src="images/face.jpg" alt="" /></span>
 								</div>
-							</section>
-
-						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>Projects</h2>
-								</header>
-								<ul class="features">
-
-									<li>
-										<span class="image fit">
-											<a href="parkhourror.html">
-												<img src="images/placeholder.jpg" alt="" class="darker" />
-											</a>
-										</span>
-										<h3>Parkhourror (WIP - Release 2024)</h3>
-									</li>
-									<li>
-										<span class="image fit"">
-											<a href="goml.html">
-												<img src="images/goml2.png" alt="" class="darker" />
-											</a>
-										</span>
-										<h3>Get Off My Lawn (2023)</h3>
-									</li>
-									<li>
-										<span class="image fit">
-											<a href="heartofhampstead.html">
-												<img src="images/hoh6.png" alt="" class="darker" />
-											</a>
-										</span>
-										<h3>Heart of Hampstead (2022)</h3>
-									</li>
-
-								</ul>
-								<a href="projects.html" class="button">See More</a>
 							</section>
 
 						
