--- a/audio.html
+++ b/audio.html
@@ -29,6 +29,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html" class="active">Audio</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
