--- a/escapearea51.html
+++ b/escapearea51.html
@@ -28,6 +28,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
@@ -38,9 +39,11 @@
 						<section id="content" class="main">
 							<ul class="actions stacked">
 								<li>
-									<h2>
-										Gameplay Video
-									</h2>
+									<header class="major">
+										<h2>
+											Gameplay Video
+										</h2>
+									</header>
 									<span class="image fit">
 										<video width="100%" height="100%" controls muted autoplay>
 											<source src="videos/ArcadeGame.mp4" type="video/mp4">
@@ -50,9 +53,11 @@
 								</li>
 
 								<li>
-									<h2>
-										About the Game
-									</h2>
+									<header class="major">
+										<h2>
+											About the Game
+										</h2>
+									</header>
 									<p>
 										Made in Unity <br />
 										Team Size: 5 <br />
