--- a/goml.html
+++ b/goml.html
@@ -32,6 +32,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
@@ -42,9 +43,11 @@
 						<section id="content" class="main">
 							<ul class="actions stacked">
 								<li>
-									<h2>
-										Gameplay Video
-									</h2>
+									<header class="major">
+										<h2>
+											Gameplay Video
+										</h2>
+									</header>
 									<span class="image fit">
 										<video width="100%" height="100%" controls muted autoplay>
 											<source src="videos/GetOffMyLawnGameplay.mp4" type="video/mp4">
@@ -53,9 +56,11 @@
 									</span>
 								</li>
 								<li>
-									<h2>
-										About the Game
-									</h2>
+									<header class="major">
+										<h2>
+											About the Game
+										</h2>
+									</header>
 									<p>
 										Made in Unreal <br />
 										Team Size: 10 <br />
