--- a/resume.html
+++ b/resume.html
@@ -26,9 +26,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html" >Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="resume.html" class="active">Resume</a></li>
 						</ul>
 					</nav>
