grammar/spell fixes

--- a/aboutme.html
+++ b/aboutme.html
@@ -47,28 +47,27 @@
 										<p>
 											Hey there!
 											<br />
-											I'm currently working towards my Masters degree at the University of Utah! I have about 1 semester left, then I'll get my 
-											Entertainment Arts and Enginnering Masters. I originally went to my undergrad for Computer Science, and minored in Music 
-											Production at Buena Vista University. I've had a ton of fun in both programs, and can't wait to get out there.
+											I am currently working towards my master’s degree at the University of Utah! I have about one semester left,
+											then I'll get my Entertainment Arts and Engineering Masters. I originally went to my undergrad for Computer Science
+											and minored in Music Production at Buena Vista University. I've had a ton of fun in both programs and can't wait to get out there.
 											<br />
-											I love all things Game Design. Thinking critically about games, how they work, and what could be done better is really 
-											fun for me. There are so many differnt ways to do things, and they all have their own advantages and disadvantages. I am 
-											looking forward to keep designing in different areas.
+											I love all things Game Design. Thinking critically about games, how they work, and what could be done better is really fun for me.
+											There are so many different ways to do things, and they all have their own advantages and disadvantages. I am looking forward to
+											keep designing in different areas.
 											<br />
-											Along with this, I love music. I have played instruments for the majority of my life, starting before second grade. I have 
-											played a couple differnt instruments, including guitar, violin, and piano, but my one true love is the saxophone (tenor more specifically). 
-											I have had a passion for music, and have been a part of concert and jazz band through my undergrad. Becasue of this, I also 
-											have an interest in Sound Design in games, and have worked on it for a couple of my projects.
+											Along with this, I love music. I have played instruments for the majority of my life, starting before second grade. I have played 
+											a couple different instruments, including guitar, violin, and piano, but my one true love is the saxophone (tenor more specifically). 
+											I have had a passion for music and have been a part of concert and jazz band through my undergrad. Because of this, I also have an 
+											interest in Sound Design in games, and have worked on it for a couple of my projects.
 										</p>
 										<p>
-											Outside of game development, I love reading - though I have way too many books on my to-read list - and I, of course, love
-											playing games. One of my all-time favorite game series is the original Mass Effect trilogy. These games are responsible for
-											me wanting to make games as a kid, and they're super nostalgic for me. I still love playing them, and I've played the second
-											game more times than I can count.
+											Outside of game development, I love reading - though I have way too many books on my to-read list - and I, of course, love playing games.
+											One of my all-time favorite game series is the original Mass Effect trilogy. These games are responsible for me wanting to make games as
+											a kid, and they're super nostalgic for me. I still love playing them, and I've played the second game more times than I can count.
 											<br />
-											One of my favorite games I've played recently is Baldur's Gate 3. I admire how the characters really feel alive, and games
-											where you can choose your own path have always held my fascination (as we can see with the Mass Effect trilogy). I am really enjoying 
-											the game, and can't wait to try out different choices and paths - though I find it hard to be mean to NPC's in games.
+											One of my favorite games I've played recently is Baldur's Gate 3. I admire how the characters really feel alive, and games where you 
+											can choose your own path have always held my fascination (as we can see with the Mass Effect trilogy). I am really enjoying the game, 
+											and can't wait to try out different choices and paths - though I find it hard to be mean to NPC's in games.
 										</p>
 									</div>
 									<span class="image"><img src="images/face.jpg" alt="" /></span>
