--- a/escapearea51.html
+++ b/escapearea51.html
@@ -68,26 +68,24 @@
 										As a Programmer
 									</h2>
 									<p>
-										Since it was a very small team, I was the only dedicated programmer on the team. We had a tech artist who 
-										also helped with some of the programming, which was a great help since we only had a couple weeks for this project. 
-										It was a lot of fun to work on a team larger than 2 on a game, since this was the first project for my graduate 
-										degree. I programmed the character movement and attacks, the enemies, as well as the checkpoint mechanic. There weren't 
-										any large issues that I came across in this project, and the team was amazing. It was a lot of fun to see what we all could 
-										do in the short time as our first project!
+										Since it was a very small team, I was the only dedicated programmer on the team. We had a tech artist who also helped with 
+										some of the programming, which was a great help since we only had a couple weeks for this project. It was a lot of fun to work 
+										on a team larger than 2 on a game, since this was the first project for my graduate degree. I programmed the character movement and 
+										attacks, the enemies, as well as the checkpoint mechanic. There weren't any large issues that I came across in this project, and the 
+										team was amazing. It was a lot of fun to see what we all could do in the short time as our first project!
 									</p>
 									<h2>
 										As a Designer
 									</h2>
 									<p>
-										This was the very first project we did for my graduate program. We were prompted to iterate upon an
-										old arcade game. The game we chose was Moon Patrol. This was a smaller group, and we all had a hand in 
-										choosing what game we itereated on, as well as the design for our own game.We went through a lot of different 
-										ideas before landing upon aliens and Moon Patrol. We originally wanted to do the game Elevator Action, 
-										but another team beat us to claiming it. Unfortunately, we had already come up with the idea of an alien excaping 
-										from an underground facility. They would go up, instead of down, and eventually reach their ship and escape. 
+										This was the very first project we did for my graduate program. We were prompted to iterate upon an old arcade game. The game we chose
+										was Moon Patrol. This was a smaller group, and we all had a hand in choosing what game we iterated on, as well as the design for our own
+										game. We went through a lot of different ideas before landing upon aliens and Moon Patrol. We originally wanted to do the game Elevator
+										Action, but another team beat us to claim it. Unfortunately, we had already come up with the idea of an alien escaping from an underground
+										facility. They would go up, instead of down, and eventually reach their ship and escape.
 										<br />
-										When we had to choose a different game, we didn't fully abandon our original design. When we ended up choosing Moon 
-										Patrol, we kept much of our original idea, just adapting it to the new game mechanics.
+										When we had to choose a different game, we didn't fully abandon our original design. When we ended up choosing Moon Patrol, we kept much of our 
+										original idea, just adapting it to the new game mechanics.
 									</p>
 
 									<a href="https://github.com/NieceyX/ArcadeGame" class="button">Repository</a>
