--- a/goml.html
+++ b/goml.html
@@ -68,6 +68,7 @@
 										Worked On: Game Design, Game Audio
 									</p>
 									<p>
+										See us at GDC 2024 Alt-Ctrl <br />
 										Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of
 										IndieCade 2023 Night Games!
 									</p>
@@ -89,14 +90,13 @@
 										As a Sound Designer
 									</h2>
 									<p>
-										This project was the first one that I really worked on sound design in a game. Since I got a minor in Music Production, and have played 
-										instruments my whole life, this was a lot of fun for me. I used the Cakewalk DAW, and made the title and main theme of the game. It took 
-										me a bit of time to get the right sound, but I'm overall happy with how it turned out - though I've listened to it so many times now I can 
+										This project was the first one that I really worked on sound design in a game. Since I got a minor in Music Production, and have played
+										instruments my whole life, this was a lot of fun for me. I used the Cakewalk DAW and made the title and main theme of the game. It took
+										me a bit of time to get the right sound, but I'm overall happy with how it turned out - though I've listened to it so many times now I can
 										hear it in my sleep.
 										<br />
 										I also worked on the SFX in the game. Most of the sounds are sourced from the audio library we have access to as students. I had plans to 
-										record some of our own sounds, and we do have some when the old man yells, but due to time and being mostly focussed on the music, I didn't 
-										have time to do this.
+										record some of our own sounds, and we do have some when the old man yells, but due to time and being mostly focused on the music, I didn't have time to do this.
 									</p>
 									<p>
 										Here is the main theme I made for the game:
