--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 											<h2>Introduction</h2>
 										</header>
 										<p>
-											Hello! I'm a game developer who mainly focusses on design. I am currently working towards
-											my Masters in Entertainment Art and Engineering at the University of Utah. I got my undergrad
-											degree in Computer Science at Buena Vista University and am passionate about making games! Here
-											you can find many games I've worked on - even some in progress! Take a look around and feel free
-											to contact me with my info at the bottom of each page.
+											Hello! I'm a game developer who mainly focusses on design. I am currently working towards my 
+											Masters in Entertainment Art and Engineering at the University of Utah. I got my undergraduate degree 
+											in Computer Science at Buena Vista University and am passionate about making games! Here you can find 
+											many games I've worked on - even some in progress! Take a look around and feel free to contact me with 
+											my info at the bottom of each page.
 										</p>
 										<a href="aboutme.html" class="button">More About Me</a>
 									</div>
