--- a/parkhourror.html
+++ b/parkhourror.html
@@ -19,9 +19,9 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Parkhourror (WIP - Release 2024)</h1>
+						<h1>Urban Nightmare (WIP - Release May 2024)</h1>
 						<p>
-							Make your way through a city trying to destroy you. Use your parkour skills to get out in any way you can.
+							A Found Footage-like First-Person Parkour game where you are trying to escape from a carnivorous city that is trying to eat you.
 						</p>
 					</header>
 				<!-- Nav -->
@@ -52,6 +52,7 @@
 											Your browser does not support the video tag.
 										</video>
 									</span>
+									<a href="https://store.steampowered.com/app/2868260/Urban_Nightmare/" target="_blank" class="button">Steam Page</a>
 								</li>
 								<li>
 									<header class="major">
@@ -62,7 +63,7 @@
 									<p>
 										Made in Unreal <br />
 										Team Size: 12 <br />
-										Timeline: current project <br />
+										Timeline: about 8 months <br />
 										Working on: Production, Sound Design
 									</p>
 									<h2>
