--- a/audio.html
+++ b/audio.html
@@ -42,7 +42,7 @@
 							<ul class="features">
 								<li>
 									<span class="image fit">
-										<img src="images/goml1.png" width="275" height="175" alt="" />
+										<img src="images/goml2.png" width="275" height="175" alt="" />
 									</span>
 									<h3>Get Off My Lawn (2023)</h3>
 									<audio controls>
@@ -52,9 +52,9 @@
 								</li>
 								<li>
 									<span class="image fit">
-										<img src="images/placeholder.jpg" width="275" height="175" alt="" />
+										<img src="images/urban1.png" width="275" height="175" alt="" />
 									</span>
-									<h3>"Parkhourror" Prototype Audio</h3>
+									<h3>Urban Nightmare Prototype Audio</h3>
 									<audio controls>
 										<source src="audio/protoSample1.wav" type="audio/wav">
 										Your browser does not support the audio element.
