--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Deniece Radford</h1>
-						<p>Game Designer<br />
+						<p><br />
 					</header>
 
 				<!-- Nav -->
@@ -45,7 +45,7 @@
 											<h2>Introduction</h2>
 										</header>
 										<p>
-											Hello! I'm a game developer who mainly focusses on design. I am currently working towards my 
+											Hello! I'm a game developer who loves all things games. I am about to graduate with my 
 											Masters in Entertainment Art and Engineering at the University of Utah. I got my undergraduate degree 
 											in Computer Science at Buena Vista University and am passionate about making games! Here you can find 
 											many games I've worked on - even some in progress! Take a look around and feel free to contact me with 
@@ -70,7 +70,7 @@
 												<img src="images/urban1.png" alt="" class="darker" />
 											</a>
 										</span>
-										<h3>Urban Nightmare (WIP - Release May 2024)</h3>
+										<h3>Urban Nightmare (2024)</h3>
 									</li>
 									<li>
 										<span class="image fit"">
