--- a/parkhourror.html
+++ b/parkhourror.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Urban Nightmare (WIP - Release May 2024)</h1>
+						<h1>Urban Nightmare (2024)</h1>
 						<p>
 							A Found Footage-like First-Person Parkour game where you are trying to escape from a carnivorous city that is trying to eat you.
 						</p>
@@ -43,12 +43,12 @@
 								<li>
 									<header class="major">
 										<h2>
-											Gameplay Video
+											Game Trailer
 										</h2>
 									</header>
 									<span class="image fit">
 										<video width="100%" height="100%" controls muted autoplay>
-											<source src="videos/parkhourrorGameplay.mp4" type="video/mp4">
+											<source src="videos/ParkourTrailer.mp4" type="video/mp4">
 											Your browser does not support the video tag.
 										</video>
 									</span>
@@ -64,36 +64,35 @@
 										Made in Unreal <br />
 										Team Size: 12 <br />
 										Timeline: about 8 months <br />
-										Working on: Production, Sound Design
+										Working on: Audio Engineer/Design, Production
 									</p>
 									<h2>
-									As a Producer
+										As a Audio Engineer/Designer
 									</h2>
 									<p>
-										I am filling the role of associative producer. So far, I have managed Jira, held and participated in standups, as well as managed 
-										one of the feature teams for the project. On Jira, I have created and managed tickets for our sprints - including managing milestones 
-										and epics. I have helped create our Sprint Review decks and show off our work to the rest of the cohort. I'm super excited for this project 
-										and can't wait to see what our team can do!
-									</p>
-									<h2>
-									As a Sound Designer
-									</h2>
-									<p>
-										Also on our team, I have filled the role as Audio/Sound Designer. I have been using Cakewalk for my DAW and have messed around with a bunch of
-										different sounds and music. So far on the project, I have been focusing most of my time here on our music system. I wanted to make a system that
-										allowed the player to take however long they need in the game. Due to this, I thought one long track would be a bad route to take. I have made
+										I have filled the role as Audio Engineer/Designer. I used Cakewalk for my DAW and have messed around with a bunch of
+										different sounds and music. I spent a lot of my time on our music system blueprint. I wanted to make a system that
+										allowed the player to take however long they need in the game. Due to this, I thought one long track would be a bad route to take - I didn't want it to obviously loop. I have made
 										short 20 measure tracks that flow into each other by keeping the baseline the same. Then, my music system blueprint will pick a random track out
-										of the ones it's given to play. My prototype audio and the current state of the music system can be seen and played below.
+										of the ones it's given to play. My prototype audio and some of music system can be seen and played below.
 										<br />
-										For the future of the project, I plan to have a different track selection for each of our levels. The idea is that the music and sounds of the city
-										become creepier and more human-like as the player gets closer to the center/heart of the city. I am excited to start working on this aspect of the sounds.
+										I was able to record the player efforts with a member of the team, and implement those into our game. I set up all of the player SFX within the animation notifies. 
+										The only exception being some looping sounds and special sounds that are being called from the cpp code.
 										<br />
-										I had a lot of fun making the music system blueprint and am still tweaking it as needed. I used the Quartz system that Unreal has, and it has worked
-										very good for us so far. I'm excited to see where it grows from here!
+										I had a lot of fun making the music system blueprint and am still tweaking it to make it better. I used the Quartz system that Unreal has, and it has worked
+										very good for us so far.
 										<br />
-										On the SFX side, I have created an asset list of all of the different sounds we will need. I have found stand-in SFX for most of our needs from the 
-										sound library we have access to, and will be working in the future to record our own sounds.
+			
 									</p>
+									<h2>
+										As a Producer
+									</h2>
+									<p>
+										I am filling the role of associate producer. I have managed Jira, held and participated in standups, as well as managed
+										one of the feature teams for the project. On Jira, I have created and managed tickets for our sprints - including managing milestones
+										and epics. I have helped create our Sprint Review decks and show off our work to the rest of the cohort.
+									</p>
+
 									<p>
 										Here is the prototype audio I did:
 									</p>
