--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 											<img src="images/urban1.png" alt="" class="darker" />
 										</a>
 									</span>
-									<h3>Urban Nightmare (WIP - Release May 2024)</h3>
+									<h3>Urban Nightmare (2024)</h3>
 								</li>
 
 								<li>
