height/width fix

--- a/parkhourror.html
+++ b/parkhourror.html
@@ -46,8 +46,8 @@
 											Game Trailer
 										</h2>
 									</header>
-									<span class="image fit">
-										<iframe src="https://drive.google.com/file/d/1wlLahZocsyNIhxCHY9r7OHfmdLpAU1oS/preview" width="1280" height="960" allow="autoplay"></iframe>
+									<span class="image fit, h_iframe">
+										<iframe src="https://drive.google.com/file/d/1wlLahZocsyNIhxCHY9r7OHfmdLpAU1oS/preview" width=100% height=100% allow="autoplay"></iframe>
 									</span>
 									<a href="https://store.steampowered.com/app/2868260/Urban_Nightmare/" target="_blank" class="button">Steam Page</a>
 								</li>
