--- a/parkhourror.html
+++ b/parkhourror.html
@@ -61,7 +61,8 @@
 										Made in Unreal <br />
 										Team Size: 12 <br />
 										Timeline: about 8 months <br />
-										Working on: Audio Engineer/Design, Production
+										Working on: Audio Engineer/Design, Production <br />
+										Available On: Steam and Switch (under Utah Games Presents)
 									</p>
 									<h2>
 										As a Audio Engineer/Designer
