--- a/parkhourror.html
+++ b/parkhourror.html
@@ -49,6 +49,7 @@
 									<span class="image fit, h_iframe">
 										<iframe src="https://drive.google.com/file/d/1wlLahZocsyNIhxCHY9r7OHfmdLpAU1oS/preview" width=100% height=100% allow="autoplay"></iframe>
 									</span>
+									<br />
 									<a href="https://store.steampowered.com/app/2868260/Urban_Nightmare/" target="_blank" class="button">Steam Page</a>
 								</li>
 								<li>
@@ -105,7 +106,7 @@
 								</li>
 								<li>
 									<h2>
-										Demo video of my audio in-game
+										Demo video of my early audio in-game
 									</h2>
 									<span class="image fit">
 										<video width="100%" height="100%" controls>
